--- a/index.html
+++ b/index.html
@@ -528,7 +528,7 @@ img {
                 <li>
                   <p><strong>24/7</strong> 在线支持</p>
                 </li>
-              </ul><a class="btn btn-outline-white mt-5" href="https://duan.cf/qq"> 点击购买 </a>
+              </ul><a class="btn btn-outline-white mt-5" href="https://duan.cf/qq" target="_blank"> 点击购买 </a>
             </div>
           </div>
         </div>
@@ -552,7 +552,7 @@ img {
                 <li>
                   <p><strong>24/7</strong> 在线支持</p>
                 </li>
-              </ul><a class="btn btn-outline-white mt-5" href="https://duan.cf/qq"> 点击购买 </a>
+              </ul><a class="btn btn-outline-white mt-5" href="https://duan.cf/qq" target="_blank"> 点击购买 </a>
             </div>
           </div>
         </div>
@@ -579,7 +579,7 @@ img {
                 <li>
                  <p><strong>24/7</strong> 在线支持</p>
                 </li>
-              </ul><a class="btn btn-outline-white mt-5" href="https://duan.cf/qq"> 点击购买 </a>
+              </ul><a class="btn btn-outline-white mt-5" href="https://duan.cf/qq" target="_blank"> 点击购买 </a>
             </div>
           </div>
         </div>
